// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Braaseye draws_correctly_braaFirst 1`] = `
<canvas
  data-snapshot-image="676d0716748afaddb149537a5007e819e56753828675e354fa87b15d81a98412eb3acfa65d92979b74442d294f65ca83f78e5e1103e8528f3366149b7f395b40"
  height="50"
  width="100"
/>
`;

exports[`Braaseye draws_correctly_noOffset 1`] = `
<canvas
  data-snapshot-image="1ee48db16d6d38a66d29a816c3d866ff897832b665cac64670877098f1e922a2024757c10694a357263b655c56d3d4985f9bb502ab7c86908859f7edaacd88fe"
  height="50"
  width="100"
/>
`;

exports[`Braaseye draws_correctly_withOffset 1`] = `
<canvas
  data-snapshot-image="1c543bf7fefadd97e634e8528801c374123b1c38b88f2607513d896f30c15bfbdce7c9717f984a709722ff51ad535df1dbf2f785660e69ce6aa514e2f72793f2"
  height="50"
  width="100"
/>
`;
